--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,13 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+<!-- 			<plugin>
 			    <groupId>com.thoughtworks.paranamer</groupId>
 			    <artifactId>paranamer-maven-plugin</artifactId>
 			    <version>2.3</version>
 			    <executions>
 			        <execution>
-			            <id>run</id>  <!-- id is optional -->
+			            <id>run</id>  id is optional
 			            <configuration>
 			                <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
 			                <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
@@ -67,7 +67,19 @@
 			            </goals>
 			        </execution>
 			    </executions>
+			</plugin> -->
+			
+			
+						<!-- 打包时过滤Test类 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 </project>
